<resources>
    <string name="app_name">InternationalASET</string>

    <!-- ObjectEvent -->
    <string name="eventName">Event Name</string>
    <string name="eventStartDate">Event Start Date</string>
    <string name="eventEndDate">Event End Date</string>
    <string name="eventDes">Event Description</string>
    <string name="eventLocation">Event Location</string>
    <string name="eventVenue">Event Venue</string>
    <string name="events">Events</string>

    <!-- Home toolbarHelper -->
    <string name="journals">Journals</string>
    <string name="news">News</string>
    <string name="addSession">Add Session</string>

    <!-- Control modify -->
    <string name="home">Home</string>
    <string name="control">Control Panel</string>
    <string name="controlEvent">Control Event</string>
    <string name="controlPasscode">Control Passcode</string>
    <string name="controlUser">Control User</string>

    <string name="level">Level</string>
    <string name="list">List</string>
    <string name="back">Back</string>
    <string name="mode">Mode</string>
    <string name="create">Create</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <!-- ObjectSession -->
    <string name="sessionDate">Session Date</string>
    <string name="sessionType">Session Type</string>
    <string name="sessionName">Session Name</string>
    <string name="sessionStartTime">Session Start Time</string>
    <string name="sessionEndTime">Session End Time</string>
    <string name="sessionDes">Session Description</string>
    <string name="controlSession">Control Session</string>
    <array name="sessionTypeChoice">
        <item>General</item>
        <item>Keynote Lecture</item>
        <item>Article</item>
        <item>Official Opening</item>
        <item>Official Closing</item>
    </array>

    <!-- ObjectArticle-->
    <string name="articleName">Article Name</string>
    <string name="articlePresenter">Article Presenter</string>
    <string name="articleAuthor">Article Author</string>
    <string name="articleLocation">Article Location</string>
    <string name="articleStartTime">Article StartTime</string>
    <string name="articleEndTime">Article EndTime</string>

    <!-- ObjectKeynote-->
    <string name="keynoteName">Keynote Name</string>
    <string name="keynotePresenter">Keynote Presenter</string>
    <string name="keynoteInstitution">Keynote Institution</string>
    <string name="keynoteDes">Keynote Description</string>
    <string name="keynoteStartTime">Keynote StartTime</string>
    <string name="keynoteEndTime">Keynote EndTime</string>

    <!--ObjectPasscode-->
    <string name="passcodeName">Passcode Name</string>
    <string name="passcodeCode">Passcode Code</string>
    <string name="passcodeType">Passcode Type</string>
    <array name="passcodeTypeChoice">
        <item>Event</item>
        <item>Registration</item>
        <item>Other</item>
    </array>

    <!-- Main event detail title -->
    <string name="date">Date</string>
    <string name="des">Description</string>
    <string name="location">Location</string>

    <!-- Main event toolbarHelper -->
    <string name="eventHome">Event Home</string>
    <string name="agenda">Agenda</string>
    <string name="homePage">Home Page</string>
    <string name="navigation_drawer_open">navigation_drawer_open</string>
    <string name="navigation_drawer_close">navigation_drawer_close</string>

    <!--HomePage user Login-->
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="create_account">Create Account</string>
    <string name="user">User</string>

    <!-- User Login-->
    <string name="loginTitle">User Login</string>
    <string name="loginEmail">Email Address</string>
    <string name="loginPassword">Password</string>

    <!--User Registration-->
    <string name="activePasscode">Active Passcode</string>
    <string name="submit">Submit</string>
    <string name="userInfor">User Information</string>
    <string name="createAccount">Create Account</string>
    <string name="emailValidation">Email Already Registered</string>

    <!--Object Account-->
    <string name="accountEmail">Account Email</string>
    <string name="accountPassword">Account Password</string>

    <!--Object User-->
    <string name="userFirstName">First Name</string>
    <string name="userMiddleName">Middle Name (Option)</string>
    <string name="userLastName">Last Name</string>
    <string name="userEmail">Email</string>
    <string name="userPassword">Password</string>
    <string name="userInstitution">Institution</string>
    <string name="userCountry">Country</string>
</resources>
