<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:text="@string/createAccount" />

            <TextView
                android:id="@+id/emailValidation"
                android:layout_toRightOf="@+id/create"
                android:visibility="invisible"
                style="@style/loginEmailReg"
                android:text="@string/emailValidation" />
        </RelativeLayout>

        <EditText
            android:id="@+id/accountEmail"
            style="@style/loginEmail"
            android:inputType="textEmailAddress"
            android:hint="@string/accountEmail" />

        <EditText
            android:id="@+id/accountPassword"
            style="@style/login"
            android:inputType="text"
            android:hint="@string/accountPassword" />

        <TextView
            android:id="@+id/userInfor"
            style="@style/login"
            android:layout_marginTop="15dp"
            android:text="@string/userInfor" />

        <EditText
            android:id="@+id/userFirstName"
            style="@style/login"
            android:inputType="text"
            android:hint="@string/userFirstName" />

        <EditText
            android:id="@+id/userMiddleName"
            style="@style/login"
            android:inputType="text"
            android:hint="@string/userMiddleName" />

        <EditText
            android:id="@+id/userLastName"
            style="@style/login"
            android:inputType="text"
            android:hint="@string/userLastName" />

        <EditText
            android:id="@+id/userInstitution"
            style="@style/login"
            android:inputType="text"
            android:hint="@string/userInstitution" />

        <EditText
            android:id="@+id/userCountry"
            style="@style/login"
            android:inputType="text"
            android:hint="@string/userCountry" />

        <Button
            android:id="@+id/submit"
            style="@style/login"
            android:text="@string/submit" />

        <Button
            android:id="@+id/cancel"
            style="@style/login"
            android:text="@string/cancel" />

    </LinearLayout>
</ScrollView>