<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/loginTitle"
        style="@style/login"
        android:layout_marginTop="15dp"
        android:text="@string/loginTitle" />

    <EditText
        android:id="@+id/loginEmail"
        style="@style/login"
        android:inputType="textEmailAddress"
        android:hint="@string/loginEmail" />

    <EditText
        android:id="@+id/loginPassword"
        style="@style/login"
        android:inputType="text"
        android:hint="@string/loginPassword" />

    <Button
        android:id="@+id/login"
        style="@style/login"
        android:text="@string/login" />

    <Button
        android:id="@+id/cancel"
        style="@style/login"
        android:text="@string/cancel" />

</LinearLayout>