<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="4">

    <LinearLayout
        android:id="@+id/time"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/articleStartTime"
            android:text="@string/articleStartTime"
            android:layout_marginTop="27dp"
            style="@style/sessionTime"/>

        <TextView
            android:id="@+id/articleEndTime"
            android:text="@string/articleEndTime"
            style="@style/sessionTime"/>

    </LinearLayout>

    <LinearLayout
        android:layout_weight="3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/articleName"
            android:text="@string/articleName"
            style="@style/sessionTitle"/>

        <TextView
            android:id="@+id/articleLocation"
            android:text="@string/articleLocation"
            style="@style/sessionBody"/>

        <TextView
            android:id="@+id/articlePresenter"
            android:text="@string/articlePresenter"
            style="@style/sessionBody"/>

        <TextView
            android:id="@+id/articleAuthor"
            android:text="@string/articleAuthor"
            style="@style/sessionBody"/>
    </LinearLayout>
</LinearLayout>