<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/create"
        android:icon="@drawable/create"
        android:title="@string/create"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/edit"
        android:icon="@drawable/edit"
        android:title="@string/edit"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/delete"
        android:icon="@drawable/delete"
        android:title="@string/delete"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/level"
        android:icon="@drawable/level"
        android:title="@string/level"
        app:showAsAction="always|withText"/>

</menu>