<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/sessionName"
        style="@style/eventHeader"
        android:layout_marginTop="25dp"
        android:text="@string/sessionName" />

    <TextView
        android:id="@+id/sessionType"
        style="@style/sessionType"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="10dp"
        android:text="@string/sessionType" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/sessionStartTime"
            android:text="@string/sessionStartTime"
            android:layout_marginLeft="25dp"
            style="@style/eventDate"/>

        <TextView
            android:id="@+id/sessionEndTime"
            android:text="@string/sessionEndTime"
            android:layout_toRightOf="@+id/sessionStartTime"
            style="@style/eventDate"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/sessionDes"
        style="@style/eventBody"
        android:text="@string/sessionDes" />

</LinearLayout>