<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/keynoteName"
        style="@style/keynoteHeader"
        android:text="@string/keynoteName"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/keynoteStartTime"
            style="@style/keynoteTime"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="25dp"
            android:text="@string/keynoteStartTime" />

        <TextView
            android:id="@+id/keynoteEndTime"
            android:layout_toRightOf="@+id/keynoteStartTime"
            style="@style/keynoteTime"
            android:text="@string/keynoteEndTime"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2">

        <TextView
            android:id="@+id/keynotePresenter"
            android:layout_marginTop="10dp"
            style="@style/keynoteBody"
            android:text="@string/keynotePresenter"/>

        <TextView
            android:id="@+id/keynoteInstitution"
            style="@style/keynoteBody"
            android:text="@string/keynoteInstitution"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/keynoteImge"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:scaleType="fitXY"/>

    </LinearLayout>

    <TextView
        android:id="@+id/keynoteDes"
        style ="@style/keynoteDes"
        android:text="@string/keynoteDes"/>

</LinearLayout>